# process_documents

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  RAPIDOC_RESEARCH.md  README.md  README_RAPIDOC.md  TESTING.md  UI_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start-embedder.sh  test_rapiddoc_backend.py
api/: config.py  db.py  embedding_client.py  main.py  models.py  pipeline.py  processor.py  redis_client.py  whisper_client.py
api/routes/: api_keys.py  documents.py  extract.py  realtime.py  search.py  sessions.py  workspaces.py
api/services/: knowledge_graph.py  ocr_llm.py  session_service.py
docs/superpowers/plans/: 2026-04-11-recording-session-rag.md
embedder/: main.py  requirements.txt
src/pdf_processor/: __init__.py  image_analyzer.py  image_preprocessor.py  line_cell_extractor.py  pipeline.py  split_merge_extractor.py  table_extractor.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: app-sidebar.tsx  chunks-panel.tsx  formulas-panel.tsx  images-panel.tsx  mode-toggle.tsx  ocr-viewer.tsx  status-badge.tsx  theme-provider.tsx  upload-modal.tsx  version-switcher.tsx
web/src/components/ui/: badge.tsx  (+5 more)
web/src/pages/: dataset-page.tsx  document-view.tsx  graph-page.tsx  realtime-page.tsx  session-detail-page.tsx  sessions-page.tsx  settings-page.tsx  workspace-page.tsx  workspaces-page.tsx
web/src/types/: index.ts
whisper/: Dockerfile  main.py  main_mlx.py  main_zipformer.py  requirements.txt
