[project]
name = "pdf-processor"
version = "0.1.0"
description = "Lightweight PDF processing pipeline for educational documents"
requires-python = ">=3.10,<3.14"

dependencies = [
    "numpy>=1.24",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "Pillow>=10.0",
    "pgvector>=0.3.0",
    "httpx>=0.27",
    "redis>=5.0",
    "openai>=1.0",
    "pypdfium2>=4.0",
    "websockets>=12.0",
    "zeroconf>=0.39",
    "netifaces>=0.11",
    "soundfile>=0.12",
    "librosa>=0.10",
    "mlx-embeddings>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]

[tool.setuptools.package-dir]
api = "api"

[tool.setuptools.package-data]
api = ["*.py"]
